# quote_content_generator

./: Makefile  README.md  pyproject.toml  quote_generator.py  quotes.json  requirements.txt
images/: jessica_jones_0.jpg.REMOVED.git-id  tilt_shift_0.png.REMOVED.git-id  tilt_shift_1.png.REMOVED.git-id  tilt_shift_2.png.REMOVED.git-id  tilt_shift_3.png.REMOVED.git-id
output/: ash_0.png.REMOVED.git-id  jermaine_cole_0.png.REMOVED.git-id  jessica_jones_0.png.REMOVED.git-id  luke_cage_0.png.REMOVED.git-id  tyler_ligon.png.REMOVED.git-id
