[project]
name = "quote-generator"
version = "0.1.0"
description = "A CLI tool to generate stylized quote images."
authors = [
    { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "Pillow>=10.0.0",
    "PyYAML>=6.0"
]

[project.scripts]
quote-generator = "quote_generator:main"  # only if you make quote_generator.py importable
